registry/oauth-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cr-proxy
  name: cr-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cr-proxy
  template:
    metadata:
      labels:
        app: cr-proxy
    spec:
      containers:
        - image: quay.io/oauth2-proxy/oauth2-proxy
          args:
          - --provider=keycloak-oidc
          - --redirect-url=https://cr.local.ongy.net/oauth2/callback
          - --oidc-issuer-url=https://keycloak.local.ongy.net/realms/local.ongy.net
          - --code-challenge-method=S256
          - --reverse-proxy=true
          - --http-address=0.0.0.0:8080
          - --upstream=http://container-registry-ui
          - --email-domain=*
          - --skip-provider-button=true
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop: ['ALL']
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 999
            runAsGroup: 1000
            privileged: false
          name: oauth-proxy
---
apiVersion: v1
kind: Service
metadata:
  name: cr-proxy
spec:
  selector:
    app: cr-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
