registry/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: container-registry-ui
  name: container-registry-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: container-registry-ui
  template:
    metadata:
      labels:
        app: container-registry-ui
    spec:
      containers:
        - image: joxit/docker-registry-ui:2.6.0
          name: ui
          ports:
            - containerPort: 80
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: container-registry-ui
spec:
  selector:
    app: container-registry-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
