registry/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: container-registry
spec:
  selector:
    app: container-registry
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      name: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: container-registry
spec:
  hostnames:
  - cr.local.ongy.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: kube-system
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: container-registry
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /v2
  - backendRefs:
    - group: ""
      kind: Service
      name: cr-proxy
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
